--- a/package.json
+++ b/package.json
@@ -5,14 +5,28 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.12"
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "eslint": "^8.28.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "nuxt": "3.0.0-rc.12",
+    "nuxt-vite": "^0.3.5",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "add": "^2.0.6",
+    "axios": "^1.2.0",
+    "node-sass": "^8.0.0",
     "primevue": "^3.18.0",
-    "yarn": "^1.22.19"
+    "sass-loader": "^10.4.1",
+    "vue-i18n": "^9.2.2"
   }
 }
