feat: add sentry

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "eslint": "^8.28.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -24,6 +25,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@nuxtjs/sentry": "^7.0.1",
     "axios": "^1.2.0",
     "node-sass": "^8.0.0",
     "primeicons": "^6.0.1",
