--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "axios": "^1.2.0",
     "node-sass": "^8.0.0",
+    "nvm": "^0.0.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.0",
     "sass": "^1.56.2",
