--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "3.2.0",
     "nuxt-vite": "^0.3.5",
     "typescript": "^4.9.3"
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "axios": "^1.2.0",
+    "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
-    "nvm": "^0.0.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.0",
     "sass": "^1.56.2",
