--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
     "primeicons": "^6.0.1",
