--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,75 +14,48 @@ jobs:
           token: ${{ secrets.TOKEN_GITHUB }}
           release-type: node
           default-branch: main
-  build-beta:
-    runs-on: ubuntu-latest
-    steps:
-      # Mandatory : fetch the current repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # To be faster, use cache system for the NPM
-      - name: Cache NPM (node_modules)
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      # Define the right Node.js's environment
-      - name: Environment for NPM
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - name: Upgrade NPM
-        run: npm install -g npm
-
-      # NPM run generate // for static website
-      - name: NPM build
-        run: |
-          node -v
-          npm ci --cache .npm --unsafe-perm --prefer-offline
-          npm run generate
-      # Upload artifacts (= builded files) to download them in the next job
-      - name: NPM artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: npm-build
-          retention-days: 1
-          path: dist
   deploy-beta:
-    needs: build-beta
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        node-version: [ 18.x ]
     environment: beta
     steps:
-      # Mandatory : fetch the current repository
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      # Download artifacts created in the previous job
-      - name: Download NPM artifacts
-        uses: actions/download-artifact@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          name: npm-build
-          path: dist
+          node-version: 18
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/staging.key
+          chmod 600 ~/.ssh/staging.key
+          cat >>~/.ssh/config <<END
+          Host staging
+            HostName $SSH_HOST
+            User $SSH_USER
+            Port $SSH_PORT
+            IdentityFile ~/.ssh/staging.key
+            StrictHostKeyChecking no
+            ForwardAgent yes
+            HashKnownHosts          no
+          END
+        env:
+          SSH_USER: ${{ secrets.USERNAME }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          SSH_HOST: ${{ secrets.HOST }}
+          SSH_PORT: ${{ secrets.PORT }}
 
-      # Define the right Node.js environment
-      - name: Environment for deploy
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
+      - name: Check out the source
+        run: |
+          ssh staging
+          'export NVM_DIR=~/.nvm &&
+          source ~/.nvm/nvm.sh &&
+          nvm install 18 &&
+          nvm use 18 &&
+          cd /srv/beta &&
+          git fetch &&
+          git reset --hard origin/main &&
+          make install'
 
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.2
-        with:
-          protocol: ftp
-          port: 21
-          server-dir: ${{ secrets.ftp_path_beta }}
-          server: space-cube.xyz
-          username: ${{ secrets.ftp_username }}
-          password: ${{ secrets.ftp_password }}
