--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
   },
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
+    "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "eslint": "^8.28.0",
+    "eslint": "^8.39.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
-    "nuxt": "3.2.0",
+    "nuxt": "3.4.0",
+    "nuxt-icon": "^0.4.0",
+    "nuxt-simple-sitemap": "^2.4.14",
     "nuxt-vite": "^0.3.5",
     "typescript": "^4.9.3"
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "@nuxtjs/robots": "^3.0.0",
     "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
