--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue,.ts --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "start": "nuxt-start"
   },
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
@@ -35,6 +36,7 @@
     "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
+    "nuxt-start": "^2.16.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.0",
     "sass": "^1.56.2",
