--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "primevue": "^3.18.0",
     "sass": "^1.56.2",
     "sass-loader": "^10.4.1",
+    "vue": "^3.2.47",
+    "vue-server-renderer": "^2.7.14",
     "vuex": "^4.0.2"
   }
 }
