--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,34 +6,14 @@ on:
     types: # This configuration does not affect the page_build event above
       - published
 jobs:
-  deploy:
-    needs: build
+  build_and_deploy:
     runs-on: ubuntu-latest
-    environment: production
     steps:
-      # Mandatory : fetch the current repository
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      # Download artifacts created in the previous job
-      - name: Download NPM artifacts
-        uses: actions/download-artifact@v2
+      - uses: actions/checkout@v3
+      - run: npm ci && npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          name: npm-build
-          path: dist
-
-      # Define the right Node.js environment
-      - name: Environment for deploy
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.2
-        with:
-          protocol: ftp
-          port: 21
-          server-dir: ${{ secrets.ftp_path_beta }}
-          server: space-cube.xyz
-          username: ${{ secrets.ftp_username }}
-          password: ${{ secrets.ftp_password }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SPACECUBE_WEBAPP }}'
+          channelId: live
+          projectId: spacecube-webapp
