--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
+    "firebase-functions-test": "^3.1.0",
     "nuxt": "3.4.0",
     "nuxt-icon": "^0.4.0",
     "nuxt-simple-sitemap": "^2.4.14",
