--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/robots": "^3.0.0",
+    "@pinia/nuxt": "^0.4.11",
     "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
     "nuxt-start": "^2.16.3",
+    "pinia": "^2.1.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.0",
     "sass": "^1.56.2",
