--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - run: npm ci # or yarn install
       - uses: sibiraj-s/action-eslint@v2
         with:
@@ -24,6 +24,9 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WORLDLE_INFINITE }}'
-          projectId: spacecube-staging
+          projectId: spacecube-webapp # PORJECT_ID FIREBASE
+          channelId: preprod
+          target: spacecube-staging # STAGING
+          expires: ''
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
