--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
     "nuxt-start": "^2.16.3",
-    "pinia": "^2.1.3",
+    "nuxt3-vuex-module": "^1.0.11",
+    "pinia": "^2.1.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.0",
     "sass": "^1.56.2",
