--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -9,7 +10,8 @@
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue,.ts --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "start": "nuxt-start"
+    "start": "nuxt-start",
+    "deploy": "firebase deploy"
   },
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
@@ -37,6 +39,7 @@
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/robots": "^3.0.0",
     "@pinia/nuxt": "^0.4.11",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
     "node-sass": "^8.0.0",
