fix: replace all localhost by env variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NUXT_PUBLIC_SITE_URL='https://localhost:3000'
-NUXT_API_URL='https://localhost:9080'
+NUXT_PUBLIC_SITE_URL='http://localhost:3000'
+NUXT_PUBLIC_API_URL='http://localhost:9080'
 NUXT_SENTRY_DSN=''
 NUXT_TOKEN_GITHUB=''
 NUXT_ENV='dev'
