--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -36,6 +35,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/robots": "^3.0.0",
     "@pinia/nuxt": "^0.4.11",
