--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/robots": "^3.0.0",
     "@pinia/nuxt": "^0.4.11",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
+    "http-proxy-middleware": "^2.0.6",
     "node-sass": "^8.0.0",
     "nuxt-start": "^2.16.3",
     "nuxt3-vuex-module": "^1.0.11",
