--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "types": [
+      "pinia-plugin-persist"
+    ]
   }
 }
