fix: feedbacks view

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NUXT_PUBLIC_SITE_URL='http://www.dev.myspacecube.com:3000'
 NUXT_PUBLIC_API_URL='http://api.dev.myspacecube.com:9080'
-NUXT_PUBLIC_IMG_URL='http://img.dev.myspacecube.com:3000'
+NUXT_PUBLIC_IMG_URL='http://api.dev.myspacecube.com:9080/uploads/images/'
 NUXT_SENTRY_DSN=''
 NUXT_TOKEN_GITHUB=''
 NUXT_ENV='dev'
