--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "nuxt-start"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.0.0-rc.1",
+    "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "eslint": "^8.39.0",
