--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue,.ts --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "start": "nuxt-start"
+    "start": "nuxt-start",
+    "scan-trans": "node ./scripts/i18n-scanner.js"
   },
   "devDependencies": {
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "chalk": "^5.3.0",
     "eslint": "^8.39.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
+    "fs": "^0.0.1-security",
+    "i18next-scanner": "^4.3.0",
     "nuxt": "3.6.2",
     "nuxt-icon": "^0.4.0",
     "nuxt-simple-sitemap": "^2.4.14",
@@ -41,6 +45,7 @@
     "axios": "^1.3.3",
     "axios-logger": "^2.6.2",
     "http-proxy-middleware": "^2.0.6",
+    "mitt": "^3.0.1",
     "node-sass": "^8.0.0",
     "nuxt-start": "^2.16.3",
     "nuxt3-vuex-module": "^1.0.11",
