fix: img in production

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lintfix": "eslint --fix --ext .js,.vue,.ts --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "start": "nuxt-start",
-    "scan-trans": "node ./scripts/i18n-scanner.js"
+    "scan-trans": "node ./scripts/i18n-scanner.js",
+    "use-latest-version-node": "./scripts/use-default-node.sh"
   },
   "devDependencies": {
     "@nuxt/image": "^1.0.0-rc.1",
