--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "npm run lint",
     "start": "nuxt-start",
     "scan-trans": "node ./scripts/i18n-scanner.js",
-    "use-latest-version-node": "./scripts/use-default-node.sh"
+    "use-latest-node-version": "./scripts/use-default-node.sh"
   },
   "devDependencies": {
     "@nuxt/image": "^1.0.0-rc.1",
