--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sass-loader": "^10.4.1",
     "vue": "^3.2.47",
     "vue-server-renderer": "^2.7.14",
+    "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.2"
   }
 }
