--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npm ci # or yarn install
+      - run: npm i # or yarn install
       - uses: sibiraj-s/action-eslint@v2
         with:
           github-token: ${{ secrets.TOKEN_GITHUB }} # Optional
